# DinoStack

./: .eslintrc.cjs  .gitignore  .gitleaks.toml  .mailmap  ADAPTERS.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  MEMORY.md  NOTICE  README.md  ROADMAP.md  SAFETY.md  SECURITY.md  SUPPORT.md  THIRD_PARTY_NOTICES.md  bootstrap.sh  install-all.sh  install-cursor.sh  install.sh  package-lock.json  pyproject.toml  uninstall-cursor.sh  uninstall.sh  update.sh  vercel.json
.agentic/: config.json  findings.md
.claude/: README.md  agents  build.sh  compression-state.json  install.sh  uninstall.sh
.codex/: AGENTS.md  README.md  build.sh  hooks.json  install.sh  uninstall.sh
.copilot/: README.md  build.sh  install.sh  uninstall.sh
.cursor/: README.md  build.sh  cursor-compat-preamble.md  hooks.json  install.sh  project-scaffolding.yml  uninstall.sh
.gemini/: GEMINI.md  README.md  build.sh  install.sh  project-scaffolding.yml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.hermes/: README.md  SKILL.md  build.sh  install.sh  uninstall.sh
.kimi/: AGENTS.md  README.md  build.sh  install.sh  uninstall.sh
.pi/: build.sh  (+3 more)
evals/fixtures/dependency-auditor/da-003/repo/: pyproject.toml
evals/fixtures/dependency-auditor/da-003/repo/.audit/: pip-audit.json  pip-licenses.json
evals/fixtures/init-project/ip-002/repo/: README.md  pyproject.toml
evals/fixtures/init-project/ip-002/repo/src/mypackage/: core.py
evals/fixtures/init-project/ip-002/repo/tests/: test_smoke.py
(+1509 files in other folders)
