[project]
name = "da-003-clean"
version = "0.1.0"
description = "Clean-control fixture: up-to-date permissive deps, no advisories."
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "requests==2.32.3",
  "pyyaml==6.0.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
